@@ -225,6 +225,12 @@
           "ruby",
           "java"
         ]
+      },
+      "ldap": {
+        "__description": "LDAP client",
+        "__used_by": [
+          "java"
+        ]
       }
     }
   },
