@@ -1,0 +1,1 @@
+co.elastic.apm.agent.java_ldap.LdapClientInstrumentation
