@@ -33,6 +33,7 @@ endif::[]
   Note: this may change your service names if you relied on the auto-discovery that uses the name of the jar file. If that jar file also contains an `Implementation-Title` attribute in the `MANIFEST.MF` file, the latter will take precedence.
 * When the `MANIFEST.MF` of the main jar contains the `Implementation-Version` attribute, it is used as the default service version (except for application servers) - {pull}1922[#1922]
 * Added support for overwritting the service version per classloader - {pull}1726[#1726]
+* Support for the Java LDAP client - {pull}2355[#2355]
 
 [float]
 ===== Bug fixes
